# nalay

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
examples/: CMakeLists.txt
examples/source/: example.cpp
include/nalay/: allocators.hpp  defaults.hpp  nalay.hpp  providers.hpp  raylib.hpp  streams.hpp  types.hpp
include/nalay/backends/: raylib.hpp
